package DesignPatterns.StructuralType.Adapter.ClassAdapter;


public interface IVoltage5V {
    public int output5V();
}
